--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Project C</title>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<h1>Project C</h1>
+		<p>Hello World</p>
+	</body>
+</html>
